// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayTabs renders 1`] = `
<div>
  <ul
    class="nav nav-underline"
    role="tablist"
  />
</div>
`;

exports[`ClayTabs renders disabled nav items 1`] = `
<div>
  <ul
    class="nav nav-underline"
    role="tablist"
  >
    <li
      class="nav-item"
    >
      <button
        aria-disabled="false"
        aria-selected="true"
        class="nav-link active btn btn-unstyled"
        data-testid="tabItem"
        role="tab"
        type="button"
      >
        One
      </button>
    </li>
    <li
      class="nav-item"
    >
      <button
        aria-disabled="true"
        aria-selected="false"
        class="nav-link btn btn-unstyled"
        data-testid="tabItem"
        role="tab"
        type="button"
      >
        Two
      </button>
    </li>
    <li
      class="nav-item"
    >
      <button
        aria-disabled="true"
        aria-selected="false"
        class="nav-link btn btn-unstyled disabled"
        data-testid="tabItem"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Three
      </button>
    </li>
  </ul>
  <div
    class="tab-content"
  >
    <div
      class="tab-pane"
      role="tabpanel"
    >
      Content One
    </div>
    <div
      class="tab-pane active"
      role="tabpanel"
    >
      Content Two
    </div>
    <div
      class="tab-pane"
      role="tabpanel"
    >
      Content Three
    </div>
  </div>
</div>
`;

exports[`ClayTabs renders justifying nav items 1`] = `
<div>
  <ul
    class="nav nav-justified nav-underline"
    role="tablist"
  />
</div>
`;

exports[`ClayTabs renders nav items as anchors 1`] = `
<div>
  <ul
    class="nav nav-underline"
    role="tablist"
  >
    <li
      class="nav-item"
    >
      <a
        aria-disabled="false"
        aria-selected="true"
        class="nav-link active"
        data-testid="tabItem"
        role="tab"
      />
    </li>
    One
    <li
      class="nav-item"
    >
      <a
        aria-disabled="true"
        aria-selected="false"
        class="nav-link"
        data-testid="tabItem"
        role="tab"
      >
        Two
      </a>
    </li>
  </ul>
  <div
    class="tab-content"
  >
    <div
      class="tab-pane"
      role="tabpanel"
    >
      Content One
    </div>
    <div
      class="tab-pane active"
      role="tabpanel"
    >
      Content Two
    </div>
  </div>
</div>
`;

exports[`ClayTabs renders with items 1`] = `
<div>
  <ul
    class="nav nav-underline"
    role="tablist"
  >
    <li
      class="nav-item"
    >
      <button
        aria-disabled="false"
        aria-selected="true"
        class="nav-link active btn btn-unstyled"
        data-testid="tabItem"
        role="tab"
        type="button"
      >
        Dummy1
      </button>
    </li>
    <li
      class="nav-item"
      data-testid="tabItem2"
    >
      <button
        aria-disabled="true"
        aria-selected="false"
        class="nav-link btn btn-unstyled"
        data-testid="tabItem"
        role="tab"
        type="button"
      >
        Dummy2
      </button>
    </li>
    <li
      class="nav-item"
    >
      <button
        aria-disabled="true"
        aria-selected="false"
        class="nav-link btn btn-unstyled"
        data-testid="tabItem"
        role="tab"
        type="button"
      >
        Dummy3
      </button>
    </li>
  </ul>
  <div
    class="tab-content"
  >
    <div
      class="tab-pane active"
      data-testid="tabPane1"
      role="tabpanel"
    >
      Tab Content 1
    </div>
    <div
      class="tab-pane"
      data-testid="tabPane2"
      role="tabpanel"
    >
      Tab Content 2
    </div>
    <div
      class="tab-pane"
      role="tabpanel"
    >
      Tab Content 3
    </div>
  </div>
</div>
`;

exports[`ClayTabs renders with modern style 1`] = `
<div>
  <ul
    class="nav nav-underline"
    role="tablist"
  />
</div>
`;
